# learning_rust

./: Cargo.toml  README.md  docker-compose.yaml
rust_ls/: Cargo.toml  README.md
rust_ls/src/: main.rs
rust_ls/src/lib/: file.rs
rust_server/: Cargo.toml
rust_server/src/: main.rs
rust_server/src/db/: db.rs
src/: main.rs
src/api/: api.rs
src/auth/: auth.rs
src/database/: db.rs
src/db/: db.rs
zero2prod/: Cargo.toml  Dockerfile  README.md  spec.yaml
zero2prod/.sqlx/: query-df1756e435e34868860f2477907263cb915b99088b17a3eb003427586c13f8c3.json
zero2prod/scripts/: init_db.sh
zero2prod/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
zero2prod/src/routes/: health_check.rs  mod.rs  subscriptions.rs
zero2prod/tests/: health_check.rs
