[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_derive = "1.0.171"
serde = "1.0.171"
axum = "0.6.19"
postgres = "0.19"
tokio-postgres = "0.7.8"
