[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib] # so that our code can be treated as both library and binary
path = "src/lib.rs"

[[bin]] # double square means its an array, we can have one library but multiple binaries
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls", # saying sqls to use tokio-runtime and tls
    "macros",               # using this macro for for querying
    "postgres",             # postgres specifics
    "uuid",                 # map uuid from postgres to uuid crate
    "chrono",               # map timestampz from SQL to Date in rust
    "migrate",              # same functions from sqlx-cli migrate but via code
] }
config = "0.14"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
#env_logger = "0.9" # a crate that implements Log trait that is expected by log crate to be implemented
log = "0.4"                                                                     # log crate
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"

[dev-dependencies]
reqwest = "0.12"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "lin-arg=fuse-ld=lld"]
